integration with rails app working, very basic cart page is also up

--- a/app/views/payplug/carts/_paypal_form.html.erb
+++ b/app/views/payplug/carts/_paypal_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag(Payplug::Paypal.submit_url) do %>
 
-	<%= hidden_field_tag "invoice", 	@cart.id %>
-	<%= hidden_field_tag "amount",  	@cart.total_amount %>
+	<%= hidden_field_tag "invoice", 	@cart.identifier %>
+	<%#= hidden_field_tag "amount",  	@cart.total_amount %>
 	<%= hidden_field_tag "business",	Payplug::Paypal.email %>
 	<%= hidden_field_tag "cmd", 		Payplug::Paypal.cmd %>
 	<%= hidden_field_tag "upload",  	Payplug::Paypal.upload %>
@@ -9,10 +9,10 @@
 	<%= hidden_field_tag "return",  	Payplug.return_url %>
 	
 	<% @cart.items.each_with_index do |item, index| %>
-		<%= hidden_field_tag "amount_#{index+1},", item.price %>
-		<%= hidden_field_tag "item_name_#{index+1},", item.name %>
-		<%= hidden_field_tag "item_number_#{index+1},", item.id %>
-		<%= hidden_field_tag "quantity_#{index+1},", item.quantity %>
+		<%= hidden_field_tag "amount_#{index+1},", item.item_price %>
+		<%= hidden_field_tag "item_number_#{index+1},", item.identifier %>
+		<%= hidden_field_tag "item_name_#{index+1},", item.item_name %>
+		<%= hidden_field_tag "quantity_#{index+1},", item.item_quantity %>
 	<% end %>
 	
 	<%= submit_tag "pay" %>
