- Removed meta-programmed code in several places - Reduced cart functinality - Renamed various attributes and methods to avoid clashes

--- a/app/views/payplug/carts/show.html.erb
+++ b/app/views/payplug/carts/show.html.erb
@@ -3,7 +3,7 @@
 <table>
 <tr>  <th>Item name</th> 	<th>price</th> 	<th>quantity</th>  </tr>
 
-<% @cart.items.each do |item| %>
+<% @cart._payplug_items.each do |item| %>
   <tr>
 	<td><%= item.item_name %></td> 
 	<td><%= item.item_quantity %></td> 
