--- a/app/views/payplug/carts/_google_checkout_form.html.erb
+++ b/app/views/payplug/carts/_google_checkout_form.html.erb
@@ -3,7 +3,7 @@
 	<%= hidden_field_tag "checkout-flow-support.merchant-checkout-flow-support.continue-shopping-url", Payplug.return_url %>
 	<%= hidden_field_tag "shopping-cart.merchant-private-data", @cart.id %>	
 
-	<% @cart.items.each_with_index do |item, index| %>
+	<% @cart._payplug_items.each_with_index do |item, index| %>
 		<%= hidden_field_tag "shopping-cart.items.item-#{index+1}.item-name", item.item_name %>
 		<%= hidden_field_tag "shopping-cart.items.item-#{index+1}.item-description", item.item_description %>
 		<%= hidden_field_tag "shopping-cart.items.item-#{index+1}.unit-price", 		item.item_price %>
