--- a/app/views/payplug/carts/_paypal_form.html.erb
+++ b/app/views/payplug/carts/_paypal_form.html.erb
@@ -10,7 +10,7 @@
 	<%= hidden_field_tag "amount",  	  @cart.total_amount %>
 	<%= hidden_field_tag "currency_code", @cart.currency %>
 		
-	<% @cart.items.each_with_index do |item, index| %>
+	<% @cart._payplug_items.each_with_index do |item, index| %>
 		<%= hidden_field_tag "item_name_#{index+1}", 	item.item_name %>
 		<%= hidden_field_tag "amount_#{index+1}", 		item.item_price %>
 		<%= hidden_field_tag "quantity_#{index+1}", 	item.item_quantity %>
