- Cart admin functionality:   - Carts now have an index page (/payplug/carts) and a details page (/payplug/carts/:id/details)   - Index page will list all the cart in the system, and link each to the detail page   - Detail page will show cart details, especially if the cart has been processed (paid for) - pagenate code refactored: moved to application_controller - carts is now mentioned as resource in routes file

--- a/app/views/payplug/notifications/index.html.erb
+++ b/app/views/payplug/notifications/index.html.erb
@@ -5,7 +5,7 @@
     <td><b>Gateway</b></td>
     <td><b>Status</b></td>
     <td><b>Transaction-Id</b></td>
-    <td><b>Created_at</b></td>
+    <td><b>Updated at</b></td>
   </th>
 
   <% @notifications.each do |n| %>
@@ -13,10 +13,10 @@
       <td><%= n.gateway %></td>
       <td><%= n.status %></td>
       <td><%= n.transaction_id %></td>
-      <td><%= n.created_at %></td>
+      <td><%= n.updated_at %></td>
       <td><%= link_to "=>", notification_path(n) %></td>
     </tr>
   <% end %>
 </table>
 
-<%= link_to "more", notifications_path(:page => @page+1) %>
+<%= link_to "more", notifications_path(:page => @page[:page_no]+1) %>
